# seed-generator-3.0

./: .gitignore  ESTRUTURA.md  README.md  REVISAO_ESTRUTURA.md  REVISAO_FINAL.md  REVISAO_FINAL_COMPLETA.md  REVISAO_MENUS_INTERATIVOS.md  gpuseed3.py  requirements.txt
python/: README.md  gpuseed3.py  run.bat
python/scripts/: install_cpu.ps1
rust/: COMO_USAR.md  CUDA_INSTALL.md  Cargo.toml  README.md  README_RUST.md  TESTE_GPU.md  build.rs  menu.ps1  rodar.ps1  run.bat  setup_env.ps1  test_gpu.ps1  test_kernel.cu
rust/src/: config.rs  gpu.rs  main.rs  monitor.rs  worker.rs
scripts/: install_cuda.ps1
